@@ -14,6 +14,7 @@ Date:
 ----------------------------------
 Changes/New Features:
 
+CAY-1992 Allow to exclude DataMap java class from Modeler class generation
 CAY-1991 More control over generated String property names
 
 Bug Fixes:
